# xend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/migrations/: 0001_init.sql  0002_transactions.sql
backend/src/: app.rs  db.rs  error.rs  main.rs  state.rs  wallet.rs
backend/src/chain/: adapter.rs  mod.rs  solana.rs
backend/src/gateway/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/handlers/: health.rs  mod.rs  resolve.rs  tx.rs  wallet.rs
backend/src/store/: mod.rs  transactions.rs  wallets.rs
backend/src/tx/: mod.rs
docs/: 00-PRD.md  01-ARCHITECTURE.md  02-DECISIONS.md  03-ROADMAP.md  04-SECURITY.md  05-GETTING-STARTED.md
