[package]
name = "xend-backend"
version = "0.1.0"
edition = "2021"
description = "Xend backend — the witness. Builds, validates, relays, indexes. Never signs."

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
bs58 = "0.5" # validate Solana base58 addresses at the edge
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
solana-sdk = "4.0.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "1.3" # decode the signed-transaction wire format for validation before broadcast
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Solana RPC/WSS client — the ONLY component holding RPC credentials. Pinned + audited.
# solana-client = "..."   # wired in Phase 2 (kept out until the signing path lands)
